--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,9 @@ body{
     grid-template-columns: 50% 50%;
 }
 
-.grid3{
+.grid4{
     display: grid;
-    grid-template-columns: 33% 33% 34%;
+    grid-template-columns: 25% 25% 25% 25%;
 }
 /**********************************HEADER*************************************/
 
@@ -191,6 +191,10 @@ body{
     .grid3{
         display: grid;
         grid-template-columns: 100%;
+    }
+
+    #ejerciciosTotales select {
+        font-size: 0.9rem;
     }
 
     /*******************************MAIN CONTENT**********************************/
