--- a/ejercicios/ejer05/css/styles.css
+++ b/ejercicios/ejer05/css/styles.css
@@ -120,18 +120,32 @@ button{
     
     }
 
-    th button {
-        width: 25px;
-        height: 25px;
+    th {
+        font-size: 1rem;
 
-        & img {
-            width: 5;
-            height: 5;
+        & input {
+            width: 110px;
+        }
+
+        & button {
+            width: 25px;
+            height: 25px;
+    
+            & img {
+                width: 5;
+                height: 5;
+            }
         }
     }
 
-    td button {
-        width: 30px;
-        height: 30px;
+    td {
+
+        font-size: 1rem;
+
+        & button {
+            width: 30px;
+            height: 30px;
+        }
     }
+
 }
