--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,9 @@ body{
     grid-template-columns: 50% 50%;
 }
 
-.grid4{
+.grid5{
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 20% 20% 20% 20% 20%;
 }
 /**********************************HEADER*************************************/
 
