--- a/ejercicios/ejer01/css/styles.css
+++ b/ejercicios/ejer01/css/styles.css
@@ -6,88 +6,164 @@
 /* Updated on: September 19, 2024           */
 /********************************************/
 
-/**********************************MAIN CONTENT**************************************/
+/**********************************HEADER*************************************/
 
-.card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: auto;
-    border: 1px solid rgb(211,211,211,0.5);
-    box-shadow: 2px 2px 8px 4px #d3d3d3d1;
-    border-radius: 15px;
-    font-family: sans-serif;
-    margin: 2vh;
+#header{
+    background-color:rgb(50, 99, 205);
+    color: rgb(255, 255, 255);
+    height: 30%;
+    margin-top: 0;
+    border: 10px outset rgb(5, 8, 196);
 }
 
-.card a {
+/******************************NAVIGATION BAR*********************************/
+
+#navigationBar{
+    height: 10vh;
+    overflow: hidden;
+    color: rgb(255, 255, 255);
+    background-color: rgb(255, 204, 0);
+    border: 10px outset rgb(197, 157, 0);
+    font-size: 1.5em;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+
+#navigationBar a {
     text-decoration: none; 
-    background-color: rgb(34, 155, 87);
     color: #ffffff;
     padding-top: 1.25vh;
-    padding-bottom: 1.25vh;
- }
-
-.card a:hover {
-    background-color: rgb(27, 122, 68);
 }
 
-#valuesList{
-    margin: 5vh 0 5vh 15vh;
-
+#navigationBar a:hover {
+    background-color: rgb(172, 138, 2);
 }
 
-#calculator{
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
+/*******************************MAIN CONTENT**********************************/
 
-.values{
-    width: 80%;
-    height: 10vh;
-    text-align: center;
-    font-size: 1.5rem;
-    border: 2px solid rgb(0, 0, 0);
-}
-
-#operandsList{
-    margin: 10vh 24% 0 30%;
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
-
-.operands{
-    width: 50%;
-    font-size: 1.5rem;
-    height: 8vh;
-    margin-bottom: 5vh;
-    background-color: #ffffff;
-    border: 2px solid rgb(0, 0, 0);
-}
-
-.operands:hover{
-    background-color: #bababa;
+#contentBox{
+    border: 10px outset rgb(5, 8, 196);
+    width: 50vh;
+    height: 435px;
+    margin: auto;
+    margin-top: 15vh;
+    background-color: #959595;
 }
 
 #result{
-    margin-bottom: 5vh;
+    height: 10vh;
+    font-size: 2rem;
+    text-align: right;
+    width: 47.25vh;
+}
+
+#numbers{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    
+}
+
+.calcButton{
+    width: 100%;
+    height: 10vh;
+}
+
+.redButton{
+    background-color: red;
+}
+
+
+.redButton:hover{
+    background-color: rgb(146, 0, 0);
+}
+
+.blueButton{
+    background-color: rgb(21, 154, 220);
+}
+
+.blueButton:hover{
+    background-color: rgb(15, 100, 143);
+}
+
+.yellowButton{
+    background-color: rgb(249, 255, 71);
+}
+
+.yellowButton:hover{
+    background-color: rgb(158, 163, 0);
+}
+
+.greenButton{
+    background-color: rgb(0, 214, 25);
+}
+
+.greenButton:hover{
+    background-color: rgb(0, 125, 15);
+}
+
+.purpleButton{
+    background-color: rgb(236, 0, 244);
+    display: none;
+}
+
+.purpleButton:hover{
+    background-color: rgb(145, 0, 150);
+}
+
+/**********************************FOOTER*************************************/
+
+#footer{
+    background-color:rgb(50, 99, 205);
+    color: rgb(255, 255, 255);
+    margin-top: 25vh;
+    height: 20%;
+    border: 10px outset rgb(5, 8, 196);
+}
+
+#caraFooter{
+    width: 10vh;
+    margin-left: 80%;
 }
 
 /***************************************MEDIA QUERIES (TABLET AND MOBILE)***************************************/
 
-/*MOVILE*/
-@media only screen and (width<=650px) {
+/*TABLET*/
+@media only screen and (width<=880px) {
 
-    /*******************************MAIN CONTENT**********************************/
+    /**********************************FOOTER*************************************/
 
-    h1{
-        font-size: 1.5rem;
+    #caraFooter{
+        width: 12.5vh;
+        margin-left: 70%;
     }
 
-    .operands{
-        width: 100%;
-        font-size: 1.5rem;
-        margin-right: 3vh;
+}
+
+@media only screen and (width<=650px) {
+
+    /******************************GENERAL STYLE**********************************/
+
+    .grid3{
+        display: grid;
+        grid-template-columns: 100%;
+    }
+
+    /******************************NAVIGATION BAR*********************************/
+
+    #navigationBar a{
+        font-size: 0.7em;
+    }
+
+    /**********************************FOOTER*************************************/
+
+    .grid2Footer{
+        display: grid;
+        grid-template-columns: 100%;
+    }
+
+    #caraFooter{
+        width: 20vh;
+        margin-left: 35%;
     }
 
 }
